--- a/CSS_advanced/styles/3-style.css
+++ b/CSS_advanced/styles/3-style.css
@@ -1,5 +1,8 @@
 html {
     scroll-behavior: smooth;
+}
+
+:root {
     /* custom properties */
     --color-primary: #d73953;
     --color-black: #090909;
